<resources>
    <string name="app_name">Deberc</string>
    <string name="team_1">МЫ</string>
    <string name="team_2">ВЫ</string>
    <string name="new_gamer">Новый игрок</string>
    <string name="add_gamer_from_list">Добавить игрока</string>
    <string name="rb_for_1000">До 1000</string>
    <string name="rb_for_500">До 500</string>
    <string name="start_button">Начать --></string>
    <string name="tip_for_new_gamer_et">Ввести имя игрока</string>
    <string name="ok">Готово</string>
    <string name="cancel">Отменить</string>
    <string name="write">Записать</string>
    <string name="reset">Сбросить команды</string>
    <string name="delete_gamers">Очистить список игроков</string>
    <string name="team1_choice">Выбрать команду 1</string>
    <string name="team2_choice">Выбрать команду 2</string>
    <string name="clean_teams_list">Очистить список</string>
</resources>
