<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_1"
            android:id="@+id/team_text_view1"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:textSize="16dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_2"
            android:id="@+id/team_text_view2"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="16dp"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_new_gamer_add_in_list"
        android:text="@string/new_gamer"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/team1_spinner"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/team2_spinner"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/team1_names_tv"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="32dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/team2_names_tv"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="32dp"/>
    </LinearLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">
        <RadioButton
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_1000"
            android:text="@string/rb_for_1000"/>
        <RadioButton
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_500"
            android:text="@string/rb_for_500"/>
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_start"
        android:layout_marginTop="16dp"
        android:text="@string/start_button"/>
</LinearLayout>